--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="footer-col">
                     <h3>Kontak Kami</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Jl. Contoh No. 123, Surabaya, Indonesia</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Jl. monster No. 123, Surabaya, Indonesia</p>
                     <p><i class="fas fa-phone"></i> +62 812 3456 7890</p>
                     <p><i class="fas fa-envelope"></i> info@elsmart.com</p>
                 </div>
