--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                             <i class="fas fa-map-marker-alt icon-large"></i>
                             <div>
                                 <h3>Alamat Kantor</h3>
-                                <p>Jl. Contoh No. 123, Kecamatan Smart, Kota Surabaya, 60234, Indonesia</p>
+                                <p>Jl. Monster No. 123, Kecamatan Smart, Kota Surabaya, 60234, Indonesia</p>
                             </div>
                         </div>
                         <div class="info-item">
